src/scss/_viewer.scss
body {
  background-color: $grey-light;
  color: #494949; // TODO move to vars
}

main {
  height: 100vh;
}

a{
  color: inherit;
}

table, select {
  width: 100%;
}

select {
  border: none;
  padding: 0.5rem;
  margin: 0.5rem 0.5rem;
  background: none;
  border-bottom: 1px solid #e0e0e0;
  width: 300px;
  &:focus {
    outline: none;
  }
}

// TODO move the bs overrides
.table {
  td {
    padding: 0.5rem;
  }
}

.list-group-item {
  background: none;
  border: none;
  padding: 0.5rem;
}

.container-fluid {
  width: 318px;
  font-size: 0.9em;
}

.osu-profile-link {
  background-color: #e0e0e0;
  width: 100%;
  display: block;
  padding: 0.5rem;
}

.grade-badge {
  background-color: #e0e0e0;
  .badge {
    border-radius: 0;
    width: 40px;
    padding: 0.7rem 0;
    &.ss{ background-color: #ffd54f; }
    &.s { background-color: #e0e0e0; }
    &.a { background-color: #00e676; }
  }
  small {
    display: block;
    text-align: center;
  }
}

.list-group {
  overflow-y: auto;
  height: 370px;
}

.list-group-item{
  .grade-badge {
     height: 1rem;
    .badge {
      padding: 0;
    }
  }
}

.profile {
  font-size: 0.8rem;
  .grade-badge {
    margin: 0 0.8rem;
  }
}

.top-ranks {
  font-size: 0.8rem;
}

.recent {
  font-size: 0.8rem;
}

